@@ -2115,4 +2115,55 @@ class OutputPage {
 		}
 		$this->addHTML( $this->parse( $s, /*linestart*/true, /*uilang*/true ) );
 	}
+	/*
+	 * Show log excerpt. All parameters are optional 
+	 * (but it makes sense to define at least $page OR $user)
+	 * @param String $page Page title for filtering the log
+	 * @param String $user Username for filtering the log
+	 * @param String $logtypes Log types, like delete, move, etc.
+	 * 	May be a single log type or an array of log types
+	 * @param int $numEntries Number of log entries to show at maximum (default: 10)
+	 * 	If there are too many entries, a "View full log" link is displayed
+	 * @return boolean Returns true if there was something in the log
+	 */
+	public function showLogs( $page = '', $user = '', $logtypes = array(), $msgKey = '' , $numEntries = 10 ) {
+		global $wgUser, $wgOut;
+		$loglist = new LogEventsList( $wgUser->getSkin(), $wgOut );
+		$pager = new LogPager( $loglist, $logtypes, $user, $page);
+		if( $pager->getNumRows() > 0 ) {
+			$pager->mLimit = $numEntries;
+			$wgOut->addHTML( '<div class="mw-warning-with-logexcerpt">' );
+			if ( $msgKey )
+				$wgOut->addWikiMsg( $msgKey );
+			$wgOut->addHTML(
+				$loglist->beginLogEventsList() .
+				$pager->getBody() .
+				$loglist->endLogEventsList()
+			);
+			if( $pager->getNumRows() > $numEntries ) { # Show "Full log" link
+				$urlParam = array();
+				if ( $page != '')
+					$urlParam['page'] = $page;
+				if ( $user != '')
+					$urlParam['user'] = $user;
+				if ( !is_array( $logtypes ) ) # Make it an array, if it isn't
+					$logtypes = array( $logtypes );
+				# If there is exactly one log type, we can link to Special:Log/type
+				if ( count( $logtypes ) == 1 )
+					$urlParam['type'] = $logtypes[0];
+				$wgOut->addHTML( $wgUser->getSkin()->link(
+					SpecialPage::getTitleFor( 'Log' ),
+					wfMsgHtml( 'log-fulllog' ),
+					array(),
+					$urlParam
+				) );
+
+			}
+			$wgOut->addHTML( '</div>' );
+			return true;
+		}
+		return false;
+	}
+
+
 }
