@@ -540,6 +540,7 @@ $wgMessageStructure = array(
 		'noarticletext-nopermission',
 		'noarticletextanon',
 		'userpage-userdoesnotexist',
+		'userpage-userdoesnotexist-view',
 		'clearyourcache',
 		'usercssyoucanpreview',
 		'userjsyoucanpreview',
@@ -588,6 +589,7 @@ $wgMessageStructure = array(
 		'permissionserrorstext-withaction',
 		'recreate-moveddeleted-warn',
 		'moveddeleted-notice',
+		'renamed-notice',
 		'log-fulllog',
 		'edit-hook-aborted',
 		'edit-gone-missing',
